--- a/chart/ksql/templates/deployment.yaml
+++ b/chart/ksql/templates/deployment.yaml
@@ -1,4 +1,6 @@
-{{ range $index, $deployment := .Values.ksqlInstances }}
+{{ range $index, $deployment := .Values.deployments }}
+{{ $ksqlOpts := join " " $deployment.ksqlOpts }}
+{{ $projectDir := printf "/etc/ksql/project" }}
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
@@ -6,7 +8,6 @@ metadata:
   labels:
     app: {{ $.Chart.Name }}-{{ $deployment.name }}
     instance: {{ $.Chart.Name }}-{{ $deployment.name }}
-    alertroute: dsys
   annotations:
     doc: {{ $.Values.docURL }}
     prometheus.io/scrape: "true"
@@ -16,22 +17,19 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ $.Chart.Name }}
-      instance: {{ $.Chart.Name }}
+      app: {{ $.Chart.Name }}-{{ $deployment.name }}
+      instance: {{ $.Chart.Name }}-{{ $deployment.name }}
   strategy:
     type: Recreate
   template:
     metadata:
       annotations:
         doc: {{ $.Values.docURL }}
-        es_index: '{"ksql":"k8s-ksql"}'
         prometheus.io/scrape: "true"
-        checksum/queries: {{ include (print $.Template.BasePath "/configmap-ksql-queries.yaml") $ | sha256sum }}
-        checksum/loggingconfig: {{ include (print $.Template.BasePath "/configmap-log4j.yaml") $ | sha256sum }}
+        checksum/projectfiles: {{ include (print $.Template.BasePath "/configmap-project-files.yaml") $ | sha256sum }}
       labels:
-        app: {{ $.Chart.Name }}
-        instance: {{ $.Chart.Name }}
-        alertroute: dsys
+        app: {{ $.Chart.Name }}-{{ $deployment.name }}
+        instance: {{ $.Chart.Name }}-{{ $deployment.name }}
     spec:
       containers:
         - name: ksql
@@ -39,27 +37,21 @@ spec:
           imagePullPolicy: IfNotPresent
           args:
             - ksql-server-start
-            - "/etc/ksql/server.properties"
+            - "{{ $projectDir }}/{{ $deployment.ksqlConfig }}"
           ports:
           - containerPort: 8080
             name: metrics
             protocol: TCP
           env:
-          - name: "BOOTSTRAP_SERVERS"
-            value: "{{ $deployment.bootstrapServers }}"
-          - name: "QUERIES_FILE"
-            value: "{{ $deployment.queriesFile }}"
           - name: "KSQL_OPTS"
-            value: "{{ $deployment.ksqlOpts }} -Dksql.extension.dir=/opt/ksql/ext"
-          - name: "RUN_KAFKA_LOCALLY"
-            value: "{{ $deployment.runKafkaLocally }}"
-          - name: "CREATE_TOPIC"
-            value: "{{ $deployment.createDevSourceTopic }}"
+            value: "{{ $ksqlOpts }}"
+          {{ if $deployment.initScript }}
+          - name: "INIT_SCRIPT"
+            value: "{{ $projectDir }}/{{ $deployment.initScript }}"
+          {{ end }}
           volumeMounts:
-          - name: queries-config-volume
-            mountPath: /ksql-queries
-          - name: log4j-config-volume
-            mountPath: /etc/ksql/log4j
+          - name: project-files-volume
+            mountPath: "{{ $projectDir }}"
           resources:
             limits:
               cpu: "{{ $deployment.cpu }}"
@@ -70,12 +62,9 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       volumes:
-        - name: queries-config-volume
+        - name: project-files-volume
           configMap:
-            name: {{ $.Chart.Name }}-queries
-        - name: log4j-config-volume
-          configMap:
-            name: {{ $.Chart.Name }}-log4j-config
+            name: {{ $.Chart.Name }}-{{ $deployment.name }}
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
