--- a/chart/ksql/templates/deployment.yaml
+++ b/chart/ksql/templates/deployment.yaml
@@ -35,6 +35,7 @@ spec:
         - name: ksql
           image: {{ $.Values.image }}
           imagePullPolicy: IfNotPresent
+          workingDir: {{ $projectDir }}
           args:
             - ksql-server-start
             - "{{ $projectDir }}/{{ $deployment.ksqlConfig }}"
